[project]
name = "create-arca"
version = "0.1.0"
description = "Generate your own ARCA harness for Claude Code, Codex CLI, or OpenCode."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["claude-code", "codex", "opencode", "ai-agent", "orchestration", "subagents", "scaffolding", "copier"]

# Copier drives the wizard + templating + `copier update`.
dependencies = [
  "copier>=9.2.0",
  "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/arca-harness/create-arca"
Issues = "https://github.com/arca-harness/create-arca/issues"

[project.scripts]
create-arca = "create_arca.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/create_arca"]

[tool.hatch.build.targets.wheel.force-include]
"copier.yml" = "create_arca/template_src/copier.yml"
"template" = "create_arca/template_src/template"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
